# memo

./: .env.example  .gitignore  LICENSE  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  vercel.json
app/: globals.css  layout.tsx  loading.tsx  page.tsx
app/api/cron/purge-archived/: route.ts
app/api/notes/: route.ts
app/api/notes/[id]/: route.ts
app/api/notes/[id]/restore/: route.ts
app/api/upload/: route.ts
app/api/version/: route.ts
app/login/: page.tsx
app/login/[[...sign-in]]/: page.tsx
app/login/sso-callback/: page.tsx
app/n/[id]/: page.tsx
apps/desktop/: README.md  package.json
apps/desktop/src/: index.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
components/: agentnote-app.tsx  codemirror-editor.tsx  confirm-dialog.tsx  desktop-shell.tsx  github-sign-in-button.tsx  icons.tsx  memo-app.tsx  public-note-view.tsx  reload-to-update.tsx  resizable-image-preview.tsx  settings-panel.tsx
lib/: archive.ts  arrows.ts  build-id.ts  db.ts  gutter.ts  media.ts  note-id.ts  notes.ts  preferences.ts  require-user.ts  tab-sync.ts  themes.ts  types.ts
lib/editor/: line-kill.ts  list-indent.ts  strikethrough.ts  wrap-indent.ts
