[package]
name = "agentnote"
version = "0.1.0"
description = "Minimal macOS shell for agentnote"
authors = ["chasehuh"]
edition = "2021"

[lib]
name = "agentnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
